--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
         <section id="about-me" class="about-me">
             <div class="about-me-img">
                 <div class="img-item">
-                    <img src="../imagenes/JIMENA_FOTO.png" class="jimena-foto" alt="Foto de Jimena">
+                    <img src="../img/JIMENA_FOTO.png" class="jimena-foto" alt="Foto de Jimena">
                 </div>
             </div>
 
@@ -51,13 +51,13 @@
         <section class="skills">
             <h2>Skills</h2>
             <ul>
-                <!-- <li><img src="imagenes/java.svg" alt="Java logo"></li>  -->
-                <li><img src="../imagenes/python.svg" alt="Python logo"></li>
-                <li><img src="../imagenes/kotlin.svg" alt="Kotlin logo"></li>
-                <li><img src="../imagenes/postgresql.svg" alt="PostgreSQL logo"></li>
-                <li><img src="../imagenes/c.svg" alt="C logo"></li>
-                <li><img src="../imagenes/html5.svg" alt="HTML logo"></li>
-                <li><img src="../imagenes/csswizardry.svg" alt="CSS logo"></li>
+                <!-- <li><img src="img/java.svg" alt="Java logo"></li>  -->
+                <li><img src="../img/python.svg" alt="Python logo"></li>
+                <li><img src="../img/kotlin.svg" alt="Kotlin logo"></li>
+                <li><img src="../img/postgresql.svg" alt="PostgreSQL logo"></li>
+                <li><img src="../img/c.svg" alt="C logo"></li>
+                <li><img src="../img/html5.svg" alt="HTML logo"></li>
+                <li><img src="../img/csswizardry.svg" alt="CSS logo"></li>
             </ul>
         </section>
 
@@ -66,7 +66,7 @@
             <div class="projects-grid">
                 <div class="recipeat">
                     <div class="recipeat-img">
-                        <img src="../imagenes/TFG-recipeat.png" alt="recipEat poster">
+                        <img src="../img/TFG-recipeat.png" alt="recipEat poster">
                     </div>
                     <div class="recipeat-info">
                         <p class="recipeat-language">Kotlin</p>
@@ -77,7 +77,7 @@
 
                 <div class="linja">
                     <div class="linja-img">
-                        <img src="../imagenes/linja-b-png.webp" alt="linja image">
+                        <img src="../img/linja-b-png.webp" alt="linja image">
                     </div>
                     <div class="linja-info">
                         <p class="linja-language">Python</p>
@@ -88,7 +88,7 @@
 
                 <div class="quantik">
                     <div class="quantik-img">
-                        <img src="../imagenes/quantik.webp" alt="quantik image">
+                        <img src="../img/quantik.webp" alt="quantik image">
                     </div>
                     <div class="quantik-info">
                         <p class="quantik-language">Java</p>
@@ -99,7 +99,7 @@
 
                 <div class="quizec">
                     <div class="quizec-img">
-                        <img src="../imagenes/QUIZEC-a2.jpg" alt="Quizec poster">
+                        <img src="../img/QUIZEC-a2.jpg" alt="Quizec poster">
                     </div>
                     <div class="quizec-info">
                         <p class="quizec-language">Kotlin</p>
