--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=/pages/home.html">
+    <meta http-equiv="refresh" content="0; url=pages/home.html">
     <title>Redirigiendo a Home</title>
-    <link rel="stylesheet" href="/CSS/home.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet" href="/CSS/home.css" />
