--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Redirigiendo a Home</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet" href="/CSS/home.css" />
+        rel="stylesheet" href="/CSS/home.css" 
+    />
 </head>
 
 <body>
