--- a/pages/home.html
+++ b/pages/home.html
@@ -3,31 +3,34 @@
 
 <head>
     <title>My first web page!</title>
-    <link rel="stylesheet" href="../CSS/home.css" />
+    <link rel="stylesheet" href="../css/home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet" href="../CSS/home.css" />
+        rel="stylesheet" href="../css/home.css" />
 </head>
 
 <!-- Carga la librería de EmailJS -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 <!--archivo JavaScript  -->
-<script src="../JS/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 
 <body>
     <header class="header">
         <!--logo-->
         <h1 class="saludo">Hello world! </h1>
-        <nav>
+        
+        <nav id="nav-menu">
             <ul>
                 <li><a href="#about-me">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact-me">Contact me</a></li>
             </ul>
         </nav>
+
+        <button class="menu" id="menu">&#9776;</button>
     </header>
 
     <main>
@@ -57,7 +60,7 @@
                 <li><img src="../img/postgresql.svg" alt="PostgreSQL logo"></li>
                 <li><img src="../img/c.svg" alt="C logo"></li>
                 <li><img src="../img/html5.svg" alt="HTML logo"></li>
-                <li><img src="../img/csswizardry.svg" alt="CSS logo"></li>
+                <li><img src="../img/csswizardry.svg" alt="css logo"></li>
             </ul>
         </section>
 
@@ -66,7 +69,9 @@
             <div class="projects-grid">
                 <div class="recipeat">
                     <div class="recipeat-img">
-                        <img src="../img/TFG-recipeat.png" alt="recipEat poster">
+                        <a href="recipEat.html">
+                            <img src="../img/TFG-recipeat.png" alt="recipEat poster">
+                        </a>                        
                     </div>
                     <div class="recipeat-info">
                         <p class="recipeat-language">Kotlin</p>
@@ -77,7 +82,9 @@
 
                 <div class="linja">
                     <div class="linja-img">
-                        <img src="../img/linja-b-png.webp" alt="linja image">
+                        <a href="linja.html">
+                            <img src="../img/linja-b-png.webp" alt="linja image">
+                        </a>
                     </div>
                     <div class="linja-info">
                         <p class="linja-language">Python</p>
@@ -88,7 +95,9 @@
 
                 <div class="quantik">
                     <div class="quantik-img">
-                        <img src="../img/quantik.webp" alt="quantik image">
+                        <a href="quantik.html">
+                            <img src="../img/quantik.webp" alt="quantik image">
+                        </a>
                     </div>
                     <div class="quantik-info">
                         <p class="quantik-language">Java</p>
@@ -99,7 +108,9 @@
 
                 <div class="quizec">
                     <div class="quizec-img">
-                        <img src="../img/QUIZEC-a2.jpg" alt="Quizec poster">
+                        <a href="quizec.html">
+                            <img src="../img/QUIZEC-a2.jpg" alt="Quizec poster">
+                        </a>
                     </div>
                     <div class="quizec-info">
                         <p class="quizec-language">Kotlin</p>
