--- a/pages/home.html
+++ b/pages/home.html
@@ -109,7 +109,7 @@
                 <div class="quizec">
                     <div class="quizec-img">
                         <a href="quizec.html">
-                            <img src="../img/QUIZEC-a2.jpg" alt="Quizec poster">
+                            <img src="../img/QUIZEC-A2.jpg" alt="Quizec poster">
                         </a>
                     </div>
                     <div class="quizec-info">
