Ahora el header es reutilizable

--- a/pages/recipEat.html
+++ b/pages/recipEat.html
@@ -3,22 +3,31 @@
 
 <head>
     <title>recipEat</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Carga la hoja de estilos -->
     <link rel="stylesheet" href="../css/recipEat.css" />
+     <link rel="stylesheet" href="../css/header.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap"/>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap" 
+        rel="stylesheet" href="../css/home.css"
+        />
 </head>
 
-<!-- Carga la librería de EmailJS -->
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
-<!--archivo JavaScript  -->
-<script src="../js/scripts.js"></script>
 
-   
+<div id="header-container"></div>
 
-    <body>
+<body>
 
-    </body>
+    <!-- Carga la librería de EmailJS -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
-</html> 
+    <!--archivo JavaScript  -->
+    <script src="../js/header_loader.js"></script>
+</body>
+
+</html>
