Ahora el header es un web component + otros cambios

--- a/pages/recipEat.html
+++ b/pages/recipEat.html
@@ -4,22 +4,21 @@
 <head>
     <title>recipEat</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <!-- Carga la hoja de estilos -->
     <link rel="stylesheet" href="../css/recipEat.css" />
-     <link rel="stylesheet" href="../css/header.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap" 
-        rel="stylesheet" href="../css/home.css"
+        rel="stylesheet"
         />
 </head>
 
 
 
-<div id="header-container"></div>
+<my-header></my-header>
 
 <body>
 
