cambios en el estilo de la pag

--- a/pages/home.html
+++ b/pages/home.html
@@ -24,7 +24,6 @@
                     <img src="../img/JIMENA_FOTO.png" class="jimena-foto" alt="Foto de Jimena">
                 </div>
             </div>
-
             <div class="about-me-info">
                 <p class="nombre">JIMENA ARNAIZ GONZÁLEZ</p>
                 <p class="descripcion">I’m a passionate software engineer focused on web and Android application
@@ -155,7 +154,7 @@
 
         </div>
 
-        <p>© 2025 Jimena A. G. Todos los derechos reservados.</p>
+        <p>© 2025 Jimena A. All rights reserved.</p>
     </footer>
 
     <!-- Carga la librería de EmailJS -->
