cambios en about me y en tamaño móvil

--- a/pages/home.html
+++ b/pages/home.html
@@ -21,15 +21,17 @@
         <section id="about-me" class="about-me">
             <div class="about-me-img">
                 <div class="img-item">
-                    <img src="../img/JIMENA_FOTO.png" class="jimena-foto" alt="Foto de Jimena">
+                    <img src="../img/jimena-foto.jpg" class="jimena-foto" alt="Foto de Jimena">
                 </div>
             </div>
             <div class="about-me-info">
-                <p class="nombre">JIMENA ARNAIZ GONZÁLEZ</p>
-                <p class="descripcion">I’m a passionate software engineer focused on web and Android application
-                    development.<br>
-                    Always eager to explore new technologies and take part in projects that challenge me and help me
-                    grow both technically and creatively.
+                <div class="about-me-saludo">
+                    <h1 class="about-me-title">Hi, <span class="about-me-im">I'm</span> </h1>
+                </div>
+                <h1 class="nombre">Jimena Arnaiz González</h1>
+                <h2 class="engineer">Software Engineer</h2>
+                <p class="descripcion">I am especially interested in <span class="web">web development</span> and <span class="android">Android app development</span>. I adapt quickly to new environments and technologies, driven by a strong motivation to continuously learn and deepen my knowledge across various areas of Computer Science.
+
                 </p>
             </div>
         </section>
