config inicial de estilos ahora se puede importar a las pags

--- a/pages/recipEat.html
+++ b/pages/recipEat.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <!-- Carga la hoja de estilos -->
+     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/recipEat.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,16 +18,14 @@
 </head>
 
 
-
-<my-header></my-header>
-
 <body>
+   <my-header></my-header>
 
-    <!-- Carga la librería de EmailJS -->
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+
 
     <!--archivo JavaScript  -->
-    <script src="../js/header_loader.js"></script>
+   <script src="../js/header.js" defer></script>
 </body>
 
 </html>
