--- a/pages/recipEat.html
+++ b/pages/recipEat.html
@@ -4,28 +4,71 @@
 <head>
     <title>recipEat</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Carga la hoja de estilos -->
-     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/recipEat.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap" 
-        rel="stylesheet"
-        />
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet" />
 </head>
 
 
 <body>
-   <my-header></my-header>
+    <header>
+        <a href="home.html" class="back-home"> 
+                <img src="../img/house-door-fill.svg" alt="Home icon" class="icon-home">
+        </a>
+       
+        <nav id="nav-menu">
+            <ul>
+                <li><a href="#about-me">About me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact-me">Contact me</a></li>
+            </ul>
+        </nav>
+        <button class="menu" id="menu">&#9776;</button>
+    </header>
 
+    <main>
+        <section class="recipEat">
+            <img src="../img/TFG-recipeat.png" alt="recipEat logo" class="logo">
+            <h1>recipEat</h1>
+            <p>RecipEat</p>
+            <p></p>
+        </section>
+
+        <section class="funcionalidades">
+            <h2>Functionalities</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+
+        <section class="tecnologias">
+            <h2>Technologies</h2>
+            <ul>
+               
+            </ul>
+        </section>
+
+        <section class="links">
+            <a href=""></a>
+        </section>
+
+    </main>
 
 
 
     <!--archivo JavaScript  -->
-   <script src="../js/header.js" defer></script>
+    <my-footer></my-footer>
+    <script src="../js/footer.js" defer></script>
 </body>
 
 </html>
