modo oscuro disponible

--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,7 @@
             </div>
             <div class="about-me-info">
                 <div class="about-me-saludo">
-                    <h1 class="about-me-title">Hi, <span class="about-me-im">I'm</span> </h1>
+                    <h1 class="about-me-title">Hi, I'm </h1>
                 </div>
                 <h1 class="nombre">Jimena Arnaiz González</h1>
                 <h2 class="engineer">Software Engineer</h2>
