pequeños cambios en tools

--- a/pages/home.html
+++ b/pages/home.html
@@ -52,7 +52,7 @@
                             <li><img src="../img/c.svg" alt="C logo"></li>
                             <li><img src="../img/postgresql-svgrepo-com.svg" alt="PostgreSQL logo"></li>
                             <li><img src="../img/html-5-svgrepo-com.svg" alt="HTML logo"></li>
-                            <li><img src="../img/css-3-svgrepo-com.svg" alt="css logo"></li>
+                            <li><img src="../img/css-3-svgrepo-com.svg" alt="CSS logo"></li>
 
                             <!-- duplicados para animación infinita sin cortes -->
                             <li><img src="../img/python-svgrepo-com.svg" alt="Python logo"></li>
@@ -63,7 +63,7 @@
                             <li><img src="../img/html-5-svgrepo-com.svg" alt="HTML logo"></li>
                             <li><img src="../img/css-3-svgrepo-com.svg" alt="CSS logo"></li>
                         </ul>
-                    </div>´
+                    </div>
                 </div>
 
 
@@ -71,7 +71,8 @@
             <div class="skills-tools">
                 <h2>Tools</h2>
                 <ul>
-                    <li><img src="../img/git-svgrepo-com.svg" alt="GitHub logo"></li>
+                    <li><img src="../img/git-svgrepo-com.svg" alt="Git logo"></li>
+                    <li><img id="github-icon" src="../img/github-142-svgrepo-com.svg" alt="GitHub logo"></li>
                     <li><img src="../img/visual-studio-code-svgrepo-com.svg" alt="Visual Studio Code logo"></li>
                     <li><img src="../img/eclipse-icon-svgrepo-com.svg" alt="Eclipse logo"></li>
                     <li><img src="../img/logo-google-android-studio-svgrepo-com.svg" alt="Android Studio logo"></li>
