--- a/pages/home.html
+++ b/pages/home.html
@@ -46,22 +46,25 @@
                 <div class="skills-scroll">
                     <div class="skills-track">
                         <ul>
-                            <li><img src="../img/python-svgrepo-com.svg" alt="Python logo"></li>
-                            <li><img src="../img/kotlin-svgrepo-com.svg" alt="Kotlin logo"></li>
-                            <li><img src="../img/java-svgrepo-com.svg" alt="Java logo"></li>
-                            <li><img src="../img/c.svg" alt="C logo"></li>
-                            <li><img src="../img/postgresql-svgrepo-com.svg" alt="PostgreSQL logo"></li>
-                            <li><img src="../img/html-5-svgrepo-com.svg" alt="HTML logo"></li>
-                            <li><img src="../img/css-3-svgrepo-com.svg" alt="CSS logo"></li>
+                            <li><img src="../img/python-svgrepo-com.svg" alt="Python logo" title="Python"></li>
+                            <li><img src="../img/kotlin-svgrepo-com.svg" alt="Kotlin logo" title="Kotlin"></li>
+                            <li><img src="../img/java-svgrepo-com.svg" alt="Java logo" title="Java"></li>
+                            <li><img src="../img/c.svg" alt="C logo" title="C"></li>
+                            <li><img src="../img/postgresql-svgrepo-com.svg" alt="PostgreSQL logo" title="PostgreSQL">
+                            </li>
+                            <li><img src="../img/html-5-svgrepo-com.svg" alt="HTML logo" title="HTML5"></li>
+                            <li><img src="../img/css-3-svgrepo-com.svg" alt="CSS logo" title="CSS3"></li>
 
                             <!-- duplicados para animación infinita sin cortes -->
-                            <li><img src="../img/python-svgrepo-com.svg" alt="Python logo"></li>
-                            <li><img src="../img/kotlin-svgrepo-com.svg" alt="Kotlin logo"></li>
-                            <li><img src="../img/java-svgrepo-com.svg" alt="Java logo"></li>
-                            <li><img src="../img/c.svg" alt="C logo"></li>
-                            <li><img src="../img/postgresql-svgrepo-com.svg" alt="PostgreSQL logo"></li>
-                            <li><img src="../img/html-5-svgrepo-com.svg" alt="HTML logo"></li>
-                            <li><img src="../img/css-3-svgrepo-com.svg" alt="CSS logo"></li>
+                            <li><img src="../img/python-svgrepo-com.svg" alt="Python logo" title="Python"></li>
+                            <li><img src="../img/kotlin-svgrepo-com.svg" alt="Kotlin logo" title="Kotlin"></li>
+                            <li><img src="../img/java-svgrepo-com.svg" alt="Java logo" title="Java"></li>
+                            <li><img src="../img/c.svg" alt="C logo" title="C"></li>
+                            <li><img src="../img/postgresql-svgrepo-com.svg" alt="PostgreSQL logo" title="PostgreSQL">
+                            </li>
+                            <li><img src="../img/html-5-svgrepo-com.svg" alt="HTML logo" title="HTML5"></li>
+                            <li><img src="../img/css-3-svgrepo-com.svg" alt="CSS logo" title="CSS3"></li>
+
                         </ul>
                     </div>
                 </div>
@@ -71,12 +74,15 @@
             <div class="skills-tools">
                 <h2>Tools</h2>
                 <ul>
-                    <li><img src="../img/git-svgrepo-com.svg" alt="Git logo"></li>
-                    <li><img id="github-icon" src="../img/github-142-svgrepo-com.svg" alt="GitHub logo"></li>
-                    <li><img src="../img/visual-studio-code-svgrepo-com.svg" alt="Visual Studio Code logo"></li>
-                    <li><img src="../img/eclipse-icon-svgrepo-com.svg" alt="Eclipse logo"></li>
-                    <li><img src="../img/logo-google-android-studio-svgrepo-com.svg" alt="Android Studio logo"></li>
-                    <li><img src="../img/firebase-svgrepo-com.svg" alt="IntelliJ IDEA logo"></li>
+                    <li><img src="../img/git-svgrepo-com.svg" alt="Git logo" title="Git"></li>
+                    <li><img id="github-icon" src="../img/github-142-svgrepo-com.svg" alt="GitHub logo" title="GitHub">
+                    </li>
+                    <li><img src="../img/visual-studio-code-svgrepo-com.svg" alt="Visual Studio Code logo"
+                            title="VS Code"></li>
+                    <li><img src="../img/eclipse-icon-svgrepo-com.svg" alt="Eclipse logo" title="Eclipse"></li>
+                    <li><img src="../img/logo-google-android-studio-svgrepo-com.svg" alt="Android Studio logo"
+                            title="Android Studio"></li>
+                    <li><img src="../img/firebase-svgrepo-com.svg" alt="Firebase logo" title="Firebase"></li>
                 </ul>
             </div>
         </section>
@@ -86,7 +92,7 @@
             <div class="projects-grid">
                 <div class="recipeat">
                     <div class="recipeat-img">
-                        <a href="recipEat.html">
+                        <a href="https://github.com/jimenaarnaiz/recipEat">
                             <img src="../img/TFG-recipeat.png" alt="recipEat logo">
                         </a>
                     </div>
@@ -99,7 +105,7 @@
 
                 <div class="linja">
                     <div class="linja-img">
-                        <a href="linja.html">
+                        <a href="https://github.com/jimenaarnaiz/SISIN/tree/main/LinjaGame">
                             <img src="../img/linja-b-png.webp" alt="Linja image">
                         </a>
                     </div>
@@ -112,7 +118,7 @@
 
                 <div class="quantik">
                     <div class="quantik-img">
-                        <a href="quantik.html">
+                        <a href="https://github.com/jimenaarnaiz/recipEat">
                             <img src="../img/quantik.webp" alt="Quantik image">
                         </a>
                     </div>
@@ -125,7 +131,7 @@
 
                 <div class="quizec">
                     <div class="quizec-img">
-                        <a href="quizec.html">
+                        <a href="https://github.com/jimenaarnaiz/Quizec">
                             <img src="../img/QUIZEC-A2.jpg" alt="Quizec poster">
                         </a>
                     </div>
