--- a/pages/home.html
+++ b/pages/home.html
@@ -40,6 +40,29 @@
             </div>
         </section>
 
+        <section class="education">
+            <h1>Education</h1>
+            <div class="education-info">
+
+                <div class="education-item">
+                    <div class="education-text">
+                        <h3>High School Diploma in Science and Technology</h3>
+                        <h4>IES Camino de Santiago</h4>
+                        <p>Sept 2019 - Jun 2021</p>
+                    </div>
+                </div>
+
+                <div class="education-item">
+                    <div class="education-text">
+                        <h3>Degree in Computer Engineering</h3>
+                        <h4>Universidad de Burgos</h4>
+                        <p>Sept 2021 - Jun 2025</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
         <section class="skills">
             <div class="skills-lan">
                 <h2>Skills</h2>
