educacion y experiencia para movil y ordenador

--- a/pages/home.html
+++ b/pages/home.html
@@ -28,7 +28,7 @@
             </div>
             <div class="about-me-info">
                 <div class="about-me-saludo">
-                    <h1 class="about-me-title">Hi, I'm </h1>
+                    <h1 class="about-me-title">Hi, I'm</h1>
                 </div>
                 <h1 class="nombre">Jimena Arnaiz González</h1>
                 <h2 class="engineer">Software Engineer</h2>
@@ -45,6 +45,7 @@
             <div class="education-info">
 
                 <div class="education-item">
+                     <div class="education-dot"></div>
                     <div class="education-text">
                         <h3>High School Diploma in Science and Technology</h3>
                         <h4>IES Camino de Santiago</h4>
@@ -53,6 +54,7 @@
                 </div>
 
                 <div class="education-item">
+                     <div class="education-dot"></div>
                     <div class="education-text">
                         <h3>Degree in Computer Engineering</h3>
                         <h4>Universidad de Burgos</h4>
@@ -62,6 +64,22 @@
 
             </div>
         </section>
+
+        <section class="experience">
+            <h1>Experience</h1>
+            <div class="experience-info">
+
+                <div class="experience-item">
+                     <div class="experience-dot"></div>
+                    <div class="experience-text">
+                        <h3>Software Engineer Intern</h3>
+                        <h4>Soluciones Informáticas Burgos</h4>
+                        <p>Apr 2025 - Jun 2025</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <section class="skills">
             <div class="skills-lan">
